# gpu-agent-framework

./: CLAUDE.md  pyproject.toml
.claude/agents/: analyst.md  coder.md  dashboard.md  git-ops.md  latex-report.md  planner.md
.claude/commands/: cycle.md
agents/shared-state/: feedback-log.json  task-list.json
docs/analysis/: review-2026-04-15-momentum.md
docs/plans/: 2026-04-15-momentum-sector-rotation.md
src/: momentum_backtest.py
tests/: test_momentum_backtest.py
